...
    "Dashboard.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today"
          }
        }
      }
    },
    "DataService.containerFailureMessage" : {
      "extractionState" : "manual",
...
    "Icons.add" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "plus.app.fill"
          }
        }
      }
    },
    "Icons.back" : {
      "extractionState" : "manual",
...
    "Icons.delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "trash"
          }
        }
      }
    },
    "Icons.down" : {
      "extractionState" : "manual",
...
    "Icons.edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "pencil"
          }
        }
      }
    },
    "Icons.filter" : {
      "extractionState" : "manual",
...
    "Icons.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "gear"
          }
        }
      }
    },
    "Icons.tag" : {
      "extractionState" : "manual",
...
    "RepeatBehaviorPicker.backButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        }
      }
    },
    "RepeatBehaviorPicker.customRepeatLabel" : {
      "extractionState" : "manual",
...
    "Settings.categoryPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Category name"
          }
        }
      }
    },
    "Settings.colorLabel" : {
      "extractionState" : "manual",
...
    "Settings.columnPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Column name"
          }
        }
      }
    },
    "Settings.columnsLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Columns"
          }
        }
      }
    },
    "Settings.examplePriority" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High"
          }
        }
      }
    },
    "Settings.exampleTitle" : {
      "extractionState" : "manual",
...
    "Settings.firstLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "First"
          }
        }
      }
    },
    "Settings.highLabel" : {
      "extractionState" : "manual",
...
    "Settings.lowLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Low"
          }
        }
      }
    },
    "Settings.prioritiesLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Priorities"
          }
        }
      }
    },
    "Settings.priorityPlaceholder" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Priority name"
          }
        }
      }
    },
    "Settings.title" : {
      "extractionState" : "manual",
...
