...
    "Calendar.searchLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        }
      }
    },
    "ContextMenu.deleteLabel" : {
      "extractionState" : "manual",
...
    "ContextMenu.doneLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        }
      }
    },
    "ContextMenu.nextLabel" : {
      "extractionState" : "manual",
...
    "Dashboard.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today"
          }
        }
      }
    },
    "DataService.containerFailureMessage" : {
      "extractionState" : "manual",
...
    "Icons.add" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "plus.app.fill"
          }
        }
      }
    },
    "Icons.back" : {
      "extractionState" : "manual",
...
    "Icons.delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "trash"
          }
        }
      }
    },
    "Icons.down" : {
      "extractionState" : "manual",
...
    "Icons.filter" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "line.3.horizontal.decrease.circle"
          }
        }
      }
    },
    "Icons.forward" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "chevron.right"
          }
        }
      }
    },
    "Icons.list" : {
      "extractionState" : "manual",
...
    "Icons.search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "magnifyingglass"
          }
        }
      }
    },
    "Icons.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "gear"
          }
        }
      }
    },
    "Icons.up" : {
      "extractionState" : "manual",
...
    "RepeatBehaviorPicker.backButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        }
      }
    },
    "RepeatBehaviorPicker.customRepeatLabel" : {
      "extractionState" : "manual",
...
    "Settings.categoriesLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Categories"
          }
        }
      }
    },
    "Settings.categoryPlaceholder" : {
      "extractionState" : "manual",
...
    "Task.createButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create task"
          }
        }
      }
    },
    "Task.currentColumnLabel" : {
      "extractionState" : "manual",
...
    "Task.startsLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Starts"
          }
        }
      }
    },
    "Task.stepLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Step"
          }
        }
      }
    },
    "Task.stepsLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Steps"
          }
        }
      }
    },
    "Task.titleLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Title"
          }
        }
      }
    },
    "TaskItem.priority" : {
      "extractionState" : "manual",
...
